# mnemesis

./: Cargo.toml  README.md  schema.json
examples/store/projects/: company-website.yaml
hermes-skill/mnemesis/: SKILL.md
hermes-skill/mnemesis/references/: contract-shape.md  diff-path-grammar.md  extending-the-cli.md
hermes-skill/mnemesis/templates/: build-deploy-contract.yaml
src/: diff.rs  main.rs  model.rs  search.rs  store.rs
tests/: cli.rs
