[package]
name = "mnemesis"
version = "0.1.0"
edition = "2021"
description = "Filesystem-backed project contract registry for AI agents"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
yaml_serde = "0.10"
strsim = "0.11"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
